Reduce padding of text input a bit to prevent overflowing when detached

--- a/src/components/common/Input/Time/Time.scss
+++ b/src/components/common/Input/Time/Time.scss
@@ -5,7 +5,7 @@
 }
 
 .textInput {
-  padding: calc($base-padding / 2) !important;
+  padding: calc(0.4 * $base-padding) !important;
 }
 
 .element {
